chronicle-example/src/snapshots/chronicle_example__test__agent_can_be_created.snap
---
source: chronicle-example/src/test.rs
assertion_line: 301
expression: create
---
[data.agent]
context = 'http://blockchaintp.com/chronicle/ns#agent:bobross'
