chronicle-example/src/snapshots/chronicle_example__test__delegation-2.snap
---
source: chronicle-example/src/test.rs
assertion_line: 125
expression: derived
---
[data.agentById]
id = 'http://blockchaintp.com/chronicle/ns#agent:responsible'
name = 'responsible'

[[data.agentById.actedOnBehalfOf]]
id = 'http://blockchaintp.com/chronicle/ns#agent:delegate'
