chronicle-example/src/snapshots/chronicle_example__test__delegation.snap
---
source: chronicle-example/src/test.rs
assertion_line: 144
expression: created
---
[data.actedOnBehalfOf]
context = 'http://blockchaintp.com/chronicle/ns#agent:responsible'
