chronicle-example/src/snapshots/chronicle_example__test__primary_source.snap
---
source: chronicle-example/src/test.rs
assertion_line: 179
expression: created
---
[data.hadPrimarySource]
context = 'http://blockchaintp.com/chronicle/ns#entity:generated'
