chronicle-example/src/snapshots/chronicle_example__test__query_agents_by_cursor.snap
---
source: chronicle-example/src/test.rs
assertion_line: 356
expression: default_cursor
---
{
  "data": {
    "agentsByType": {
      "pageInfo": {
        "hasPreviousPage": false,
        "hasNextPage": true,
        "startCursor": "0",
        "endCursor": "9"
      },
      "edges": [
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross0",
            "name": "bobross0",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "0"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross1",
            "name": "bobross1",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "1"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross10",
            "name": "bobross10",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "2"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross11",
            "name": "bobross11",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "3"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross12",
            "name": "bobross12",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "4"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross13",
            "name": "bobross13",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "5"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross14",
            "name": "bobross14",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "6"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross15",
            "name": "bobross15",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "7"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross16",
            "name": "bobross16",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "8"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross17",
            "name": "bobross17",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "9"
        }
      ]
    }
  }
}
