chronicle-example/src/snapshots/chronicle_example__test__quotation-2.snap
---
source: chronicle-example/src/test.rs
expression: derived
---
[data.entityById]
id = 'http://blockchaintp.com/chronicle/ns#entity:generated'
name = 'generated'

[[data.entityById.wasDerivedFrom]]
id = 'http://blockchaintp.com/chronicle/ns#entity:used'

[[data.entityById.wasQuotedFrom]]
id = 'http://blockchaintp.com/chronicle/ns#entity:used'
