chronicle-example/src/snapshots/chronicle_example__test__quotation.snap
---
source: chronicle-example/src/test.rs
assertion_line: 261
expression: created
---
[data.wasQuotedFrom]
context = 'http://blockchaintp.com/chronicle/ns#entity:generated'
